--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name = "keywords" content = "Young Jin Kim - University of Waterloo Electrical Engineering Graduate">
     <meta name = "author" content = "Young Jin Kim">
     <title>Young Jin Kim | Welcome</title>
-    <link rel ="stylesheet" href ="./css/style1.css">
+    <link rel ="stylesheet" href ="./css/style_index.css">
     <script src ="./script.js" charset ="utf-8"></script>
   </head>
   <body>
